Bulk upload and create new user Fix (#35)
* Email config change

* Removed location cache

* Heroku Test Env: redis remove update

* Heroku Test Env: redis remove update in properties and config

* Heroku Test Env: redis remove update in properties and config update

* Forget password fix

* Bulk upload and create new user Fix

* Production Fixes

1. Multi Location
2. Multi Group in create user
3. Redis cache based login privilege check
4. Email content and validations
5. Attendance supervisor list for mobile view
6. Profile endpoint fix
7. Report group response fix

* Test Environment Fixes

1. In create User method included inactive user handing flow and alert
2. Allow one time edit - paid leave based scenario
3. Fixed group response to Array List in getAllUser method
4. Add Location duplicate fix

* Feature test environment (#36)

* Heroku Prod- Forget password mail fix

* Heroku Prod-create user log check

* Bulk upload and create new user Fix

* Production Fixes

1. Multi Location
2. Multi Group in create user
3. Redis cache based login privilege check
4. Email content and validations
5. Attendance supervisor list for mobile view
6. Profile endpoint fix
7. Report group response fix

* Test Environment Fixes

1. In create User method included inactive user handing flow and alert
2. Allow one time edit - paid leave based scenario
3. Fixed group response to Array List in getAllUser method
4. Add Location duplicate fix

---------

Co-authored-by: uniqproddev <uniqproddev@gmail.com>

* Bug Fix

Redis

* Privilege Cache

Organization based endpoint fix
privilege based cache fix

* Update application property

* Update redisScheduler

* Test bug fix for production

1. Fixed bulk upload
2. Created new email template
3. Fixed secondary details updation method
4. Fixed secondary mobile number constrain

---------

Co-authored-by: uniqproddev <uniqproddev@gmail.com>